--- a/index.html
+++ b/index.html
@@ -5,28 +5,65 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="src/css/index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
   <div class="container">
-    <div class="row">
-      <div class="col-lg-4" style="background-color:lavender;">hello</div>
-      <div class="col-lg-8" style="background-color:pink;">
-  	     <table class="table table-bordered">
+    <div class="row cc-widget-div">
+      <div class="col-lg-4" style="background-color:yellow;">hello</div>
+      <div class="col-lg-8 cc-notif-div">
+  	     <table class="table table-hover table-condensed">
            <thead>
              <tr>
-              <th>Firstname</th>
-              <th>Lastname</th>
-              <th>Email</th>
+              <th width="30%">TIME</th>
+              <th width="40%">VIOLATION</th>
+              <th width="15%">USER</th>
+              <th width="15%">ACTIONS</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>John</td>
-              <td>Doe</td>
-              <td>john@example.com</td>
+              <td>2017-04-01 12:00:08 PM IST</td>
+              <td>signal jump </td>
+              <td>axcv </td>
+              <td>
+                <span class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Chalan"></span>
+                <span class="glyphicon glyphicon-facetime-video cc-notif-action-span"></span>
+              </td>
             </tr>
+            <tr>
+              <td>2017-04-01 12:00:08 PM IST</td>
+              <td>signal jump </td>
+              <td>axcv </td>
+              <td>fine collected </td>
+            </tr>
+            <tr>
+              <td>2017-04-01 12:00:08 PM IST</td>
+              <td>signal jump </td>
+              <td>axcv </td>
+              <td>fine collected </td>
+            </tr>
+            <tr>
+              <td>2017-04-01 </td>
+              <td>signal jump </td>
+              <td>axcv </td>
+              <td>fine collected </td>
+            </tr>
+            <tr>
+              <td>2017-04-01 </td>
+              <td>signal jump </td>
+              <td>axcv </td>
+              <td>fine collected </td>
+            </tr>
+            <tr>
+              <td>2017-04-01 </td>
+              <td>signal jump </td>
+              <td>axcv </td>
+              <td>fine collected </td>
+            </tr>
+          </tbody>
       </div>
     </div>
   </div>
