--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="row cc-widget-div">
       <div class="col-lg-4">
-        <video width="320" height="240" controls>
+        <video width="320" height="240" controls autoplay muted>
           <source src="videos/BangaloreTraffic.mp4" type="video/mp4">
         </video>
       </div>
@@ -118,10 +118,11 @@
             <h4 class="modal-title">2017-04-01 15:05:45 PM IST</h4>
           </div>
           <div class="modal-body">
-            <p>VIEW VIDEO MODAL</p>
-            <video width="320" height="240" controls>
-              <source src="videos/BangaloreTraffic.mp4" type="video/mp4">
-            </video>
+            <center>
+              <video width="400" height="300" controls autoplay muted>
+                <source src="videos/BangaloreTraffic.mp4" type="video/mp4">
+              </video>
+            </center>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
