--- a/index.html
+++ b/index.html
@@ -8,94 +8,82 @@
   <link rel="stylesheet" href="src/css/index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <script src="src/js/map.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4eHXVszAdWEGe1nk-oky3zWCUJ2mUGE8&callback=initMap"></script>
 </head>
 <body>
   <div class="container">
-    <div class="row cc-widget-div">
+    <div class="row cc-widget-div" style="margin:10px;">
       <div class="col-lg-4">
         <video width="320" height="240" controls autoplay muted>
           <source src="videos/BangaloreTraffic.mp4" type="video/mp4">
         </video>
       </div>
       <div class="col-lg-8 cc-notif-div">
-  	     <table class="table table-hover table-condensed">
-           <thead>
-             <tr>
-              <th width="30%">TIME</th>
-              <th width="40%">VIOLATION</th>
-              <th width="15%">USER</th>
-              <th width="15%">ACTIONS</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>2017-04-01 12:00:08 PM IST</td>
-              <td>signal jump </td>
-              <td>axcv </td>
-              <td>
-                <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
-                <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
-                <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#viewMapModal" data-toggle="modal"></i>
-              </td>
-            </tr>
-            <tr>
-              <td>2017-04-01 12:00:08 PM IST</td>
-              <td>signal jump </td>
-              <td>axcv </td>
-              <td>
-                <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
-                <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
-                <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#viewMapModal" data-toggle="modal"></i>
-              </td>
-            </tr>
-            <tr>
-              <td>2017-04-01 12:00:08 PM IST</td>
-              <td>signal jump </td>
-              <td>axcv </td>
-              <td>
-                <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
-                <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
-                <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#viewMapModal" data-toggle="modal"></i>
-              </td>
-            </tr>
-            <tr>
-              <td>2017-04-01 </td>
-              <td>signal jump </td>
-              <td>axcv </td>
-              <td>
-                <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
-                <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
-                <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#viewMapModal" data-toggle="modal"></i>
-              </td>
-            </tr>
-            <tr>
-              <td>2017-04-01 </td>
-              <td>signal jump </td>
-              <td>axcv </td>
-              <td>
-                <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
-                <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
-                <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#viewMapModal" data-toggle="modal"></i>
-              </td>
-            </tr>
-            <tr>
-              <td>2017-04-01 </td>
-              <td>signal jump </td>
-              <td>axcv </td>
-              <td>
-                <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
-                <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
-                <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#viewMapModal" data-toggle="modal"></i>
-              </td>
-            </tr>
-          </tbody>
+         <table class="table table-hover table-condensed">
+             <thead>
+               <tr>
+                <th width="30%">TIME</th>
+                <th width="40%">VIOLATION</th>
+                <th width="15%">USER</th>
+                <th width="15%">ACTIONS</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>2017-04-01 12:00:08 PM IST</td>
+                <td>Signal Jump</td>
+                <td>USER1</td>
+                <td>
+                  <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
+                  <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
+                  <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
+                </td>
+              </tr>
+              <tr>
+                <td>2017-04-01 12:00:08 PM IST</td>
+                <td>Helmet Not Worn</td>
+                <td>USER2</td>
+                <td>
+                  <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
+                  <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
+                  <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
+                </td>
+              </tr>
+              <tr>
+                <td>2017-04-01 12:00:08 PM IST</td>
+                <td>Rash Driving</td>
+                <td>USER3</td>
+                <td>
+                  <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
+                  <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
+                  <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
+                </td>
+              </tr>
+              <tr>
+                <td>2017-04-01 12:00:08 PM IST</td>
+                <td>Involved In Accident</td>
+                <td>USER4</td>
+                <td>
+                  <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
+                  <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
+                  <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
+                </td>
+              </tr>
+            </tbody>
+          </table>
       </div>
     </div>
-
+    <div class="row cc-widget-div" style="width:100%;height:60vh;margin:10px;" id="mapParent">
+        <div class="col-lg-12" id="map" style="height:100%"></div>
+    </div>
+    <!-- MODAL START HERE -->
     <div class="modal fade" tabindex="-1" id="issueChallanModal" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
-          <div class="modal-header">
+          <div cl<div id="map"></div>ass="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title">Modal title</h4>
           </div>
@@ -109,7 +97,6 @@
         </div>
       </div>
     </div>
-
     <div class="modal fade" tabindex="-1" id="viewVideoModal" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -119,7 +106,7 @@
           </div>
           <div class="modal-body">
             <center>
-              <video width="400" height="300" controls autoplay muted>
+              <video width="400" height="300" controls autoplay muted loop>
                 <source src="videos/BangaloreTraffic.mp4" type="video/mp4">
               </video>
             </center>
@@ -130,25 +117,6 @@
         </div>
       </div>
     </div>
-
-    <div class="modal fade" tabindex="-1" id="viewMapModal" role="dialog">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">Modal title</h4>
-          </div>
-          <div class="modal-body">
-            <p>VIEW MAP MODAL</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-
-          </div>
-        </div>
-      </div>
-    </div>
-
   </div>
 </body>
 </html>
