--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="row cc-widget-div" style="margin:10px;">
       <div class="col-lg-4">
-        <video width="320" height="240" controls autoplay muted>
+        <video width="320" height="240" autoplay muted>
           <source src="videos/BangaloreTraffic.mp4" type="video/mp4">
         </video>
       </div>
@@ -83,7 +83,7 @@
     <div class="modal fade" tabindex="-1" id="issueChallanModal" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
-          <div cl<div id="map"></div>ass="modal-header">
+          <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title">Modal title</h4>
           </div>
