After View Video Update
After View Video Update

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="modal-body">
             <center>
               <video width="400" height="300" controls autoplay muted loop>
-                <source src="videos/BangaloreTraffic.mp4" type="video/mp4">
+                <source src="videos/bombaytraffic.mp4" type="video/mp4">
               </video>
             </center>
           </div>
