form update challan
form update challan

--- a/index.html
+++ b/index.html
@@ -89,15 +89,32 @@
           </div>
           <div class="modal-body">
             <p>ISSUE CHALLAN</p>
-            <center>
+            <right>
               <form>
-                License Number:
-                <input type="text" name="licenseNumber" value="GJ05/1234567">
-                <br>
-                Fine Amount:
-                <input type="text" name="fineAmount" value="500">
+                <table>
+                  <tr>
+                    <td>
+                      License Number:
+                    </td>
+                    <td>
+                      <input type="text" name="licenseNumber" value="GJ05/1234567">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td> </td>
+                    <td> </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      Fine Amount:
+                    </td>
+                    <td>
+                      <input type="text" name="fineAmount" value="500">
+                    </td>
+                  </tr>
+                </table>
               </form>
-            </center>
+            </right>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-success">Submit</button>
