--- a/index.html
+++ b/index.html
@@ -14,71 +14,118 @@
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4eHXVszAdWEGe1nk-oky3zWCUJ2mUGE8&callback=initMap"></script>
 </head>
 <body>
-  <div class="container">
-    <div class="row cc-widget-div" style="margin:10px;">
-      <div class="col-lg-4">
-        <video width="320" height="240" autoplay muted loop>
-          <source src="videos/BangaloreTraffic.mp4" type="video/mp4">
-        </video>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">City Survillence System</a>
+        </div>
+		    <!-- Collect the nav links, forms, and other content for toggling -->
+    </div>
+  </nav>
+
+  <div class="container-fluid">
+    <div class="row">
+			<div class="col-md-1">
+			</div>
+			<div class="col-md-9">
+				<br><br><br><br>
+
+					<div class="input-group input-group-lg">
+						<input type="text" autocomplete="off" class="form-control input-lg" id="search-bar" placeholder="Search here!">
+						<span class="input-group-btn">
+							<button class="btn btn-default" id="searchBtn" type="button">Go!</button>
+						</span>
+					</div>
+			</div>
+			<div class="col-md-1">
+			</div>
+		</div>
+    <br><br>
+    <div class="widget">
+      <div class="widget-header">
+        <i class="icon-bookmark"></i>
+        <h3>M.G ROAD</h3>
       </div>
-      <div class="col-lg-8 cc-notif-div">
-         <table class="table table-hover table-condensed">
-             <thead>
-               <tr>
-                <th width="30%">TIME</th>
-                <th width="40%">VIOLATION</th>
-                <th width="15%">USER</th>
-                <th width="15%">ACTIONS</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>2017-04-01 12:00:08 PM IST</td>
-                <td>Signal Jump</td>
-                <td>USER1</td>
-                <td>
-                  <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
-                  <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
-                  <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
-                </td>
-              </tr>
-              <tr>
-                <td>2017-04-01 12:00:08 PM IST</td>
-                <td>Helmet Not Worn</td>
-                <td>USER2</td>
-                <td>
-                  <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
-                  <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
-                  <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
-                </td>
-              </tr>
-              <tr>
-                <td>2017-04-01 12:00:08 PM IST</td>
-                <td>Rash Driving</td>
-                <td>USER3</td>
-                <td>
-                  <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
-                  <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
-                  <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
-                </td>
-              </tr>
-              <tr class="bg-danger">
-                <td>2017-04-01 12:00:08 PM IST</td>
-                <td>Involved In Accident</td>
-                <td>USER4</td>
-                <td>
-                  <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
-                  <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
-                  <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+      <div class="widget-content">
+        <div class="row">
+          <div class="col-lg-3">
+            <center>
+            <video width="320" height="240" autoplay muted loop>
+              <source src="videos/BangaloreTraffic.mp4" type="video/mp4">
+            </video>
+          </center>
+          </div>
+          <div class="col-lg-5">
+             <table class="table table-hover table-condensed">
+                 <thead>
+                   <tr>
+                    <th width="35%">TIME</th>
+                    <th width="25%">VIOLATION</th>
+                    <th width="15%">NUMBER</th>
+                    <th width="25%">ACTIONS</th>
+                  </tr>
+                </thead>
+                <tbody class="cc-notif-time">
+                  <tr>
+                    <td>2017-04-01 12:00:08 PM IST</td>
+                    <td>Signal Jump</td>
+                    <td>USER1</td>
+                    <td>
+                      <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2017-04-01 12:00:08 PM IST</td>
+                    <td>Helmet Not Worn</td>
+                    <td>USER2</td>
+                    <td>
+                      <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2017-04-01 12:00:08 PM IST</td>
+                    <td>Rash Driving</td>
+                    <td>USER3</td>
+                    <td>
+                      <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                    </td>
+                  </tr>
+                  <tr class="bg-danger">
+                    <td>2017-04-01 12:00:08 PM IST</td>
+                    <td>Involved In Accident</td>
+                    <td>USER4</td>
+                    <td>
+                      <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+          </div>
+          <div class="col-lg-4" id="map" style="height:40vh;"></div>
+        </div>
       </div>
     </div>
-    <div class="row cc-widget-div" style="width:100%;height:60vh;margin:10px;" id="mapParent">
+    <!--<div class="row cc-widget-div" style="width:100%;height:60vh;margin:10px;" id="mapParent">
         <div class="col-lg-12" id="map" style="height:100%"></div>
-    </div>
+    </div>-->
     <!-- MODAL START HERE -->
     <div class="modal fade" tabindex="-1" id="issueChallanModal" role="dialog">
       <div class="modal-dialog" role="document">
@@ -144,6 +191,23 @@
         </div>
       </div>
     </div>
+    <div class="modal fade" tabindex="-1" id="vehicleDetailModal" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">2017-04-01 15:05:45 PM IST</h4>
+          </div>
+          <div class="modal-body">
+            <h3>VEHICLE DETAILS HERE</h3>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </body>
 </html>
