--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="row">
           <div class="col-lg-3">
             <center>
-            <video width="320" height="240" autoplay muted loop>
+            <video width="332" height="249" autoplay muted loop>
               <source src="videos/BangaloreTraffic.mp4" type="video/mp4">
             </video>
           </center>
@@ -72,6 +72,50 @@
                   </tr>
                 </thead>
                 <tbody class="cc-notif-time">
+                  <tr>
+                    <td>2017-04-01 12:00:08 PM IST</td>
+                    <td>Signal Jump</td>
+                    <td>USER1</td>
+                    <td>
+                      <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2017-04-01 12:00:08 PM IST</td>
+                    <td>Helmet Not Worn</td>
+                    <td>USER2</td>
+                    <td>
+                      <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2017-04-01 12:00:08 PM IST</td>
+                    <td>Rash Driving</td>
+                    <td>USER3</td>
+                    <td>
+                      <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                    </td>
+                  </tr>
+                  <tr class="bg-danger">
+                    <td>2017-04-01 12:00:08 PM IST</td>
+                    <td>Involved In Accident</td>
+                    <td>USER4</td>
+                    <td>
+                      <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                    </td>
+                  </tr>
                   <tr>
                     <td>2017-04-01 12:00:08 PM IST</td>
                     <td>Signal Jump</td>
