After vehicle Info Modal
After vehicle Info Modal

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<div class="input-group input-group-lg">
 						<input type="text" autocomplete="off" class="form-control input-lg" id="search-bar" placeholder="Search here!">
 						<span class="input-group-btn">
-							<button class="btn btn-default" id="searchBtn" type="button">Go!</button>
+							<button class="btn btn-primary" id="searchBtn" type="button">Go!</button>
 						</span>
 					</div>
 			</div>
@@ -80,7 +80,7 @@
                       <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
-                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Vehicle Info" data-target="#vehicleDetailModal" data-toggle="modal"></i>
                     </td>
                   </tr>
                   <tr>
@@ -91,7 +91,7 @@
                       <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
-                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Vehicle Info" data-target="#vehicleDetailModal" data-toggle="modal"></i>
                     </td>
                   </tr>
                   <tr>
@@ -102,7 +102,7 @@
                       <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
-                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Vehicle Info" data-target="#vehicleDetailModal" data-toggle="modal"></i>
                     </td>
                   </tr>
                   <tr class="bg-danger">
@@ -113,7 +113,7 @@
                       <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
-                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Vehicle Info" data-target="#vehicleDetailModal" data-toggle="modal"></i>
                     </td>
                   </tr>
                   <tr>
@@ -124,7 +124,7 @@
                       <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
-                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Vehicle Info" data-target="#vehicleDetailModal" data-toggle="modal"></i>
                     </td>
                   </tr>
                   <tr>
@@ -135,7 +135,7 @@
                       <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
-                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Vehicle Info" data-target="#vehicleDetailModal" data-toggle="modal"></i>
                     </td>
                   </tr>
                   <tr>
@@ -146,7 +146,7 @@
                       <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
-                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Vehicle Info" data-target="#vehicleDetailModal" data-toggle="modal"></i>
                     </td>
                   </tr>
                   <tr class="bg-danger">
@@ -157,7 +157,7 @@
                       <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
-                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Video" data-target="#vehicleDetailModal" data-toggle="modal"></i>
+                      <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Vehicle Info" data-target="#vehicleDetailModal" data-toggle="modal"></i>
                     </td>
                   </tr>
                 </tbody>
@@ -178,13 +178,14 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title">Modal title</h4>
           </div>
-          <div class="modal-body">
-            <p>ISSUE CHALLAN</p>
+          <div class="modal-body" align="center">
+            <h3>ISSUE CHALLAN</h3>
+            <br><br>
             <right>
               <form>
                 <table>
                   <tr>
-                    <td>
+                    <td width=250px>
                       License Number:
                     </td>
                     <td>
@@ -192,8 +193,8 @@
                     </td>
                   </tr>
                   <tr>
-                    <td> </td>
-                    <td> </td>
+                    <td><br></td>
+                    <td><br></td>
                   </tr>
                   <tr>
                     <td>
@@ -208,7 +209,7 @@
             </right>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-success">Submit</button>
+            <button type="button" class="btn btn-primary">Submit</button>
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 
           </div>
@@ -242,8 +243,66 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title">2017-04-01 15:05:45 PM IST</h4>
           </div>
-          <div class="modal-body">
-            <h3>VEHICLE DETAILS HERE</h3>
+          <div class="modal-body" height="auto">
+
+            <div class="row">
+              <div class="col-lg-3">
+                <img src="numberplate.jpg" height="70px" width="70px">
+              </div>
+              <div class="cols-lg-9">
+                  <div>
+                    <table>
+                      <td width=100px>
+                    OWNER:</td>
+                    <td><input type="text" id="ownerName" placeholder="LUFFY" disabled></td>
+                  </table><hr>
+                  </div>
+                  <div>
+                    <table>
+                      <td width=100px>
+                    RC NUMBER:</td>
+                    <td><input type="text" id="rcNumber" placeholder="GJ05/21034" disabled></td>
+                  </table><hr>
+                  </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-12">EMMISION PROFILE:&nbsp;&nbsp;&nbsp;<input type="text" id="emmisionProfile" placeholder="BS-3" disabled><hr></div>
+            </div>
+            <div class="row">
+              <div class="col-lg-12"><h3>TRIPS HISTORY:</h3><br>
+                <table class="table table-condensed">
+                  <thead>
+                    <tr>
+                      <th>TIME</th>
+                      <th>USER</th>
+                      <th>LICENSE NO.</th>
+                      <th>ROUTE</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>2014-04-02 03:04:34 AM IST</td>
+                      <td>USER1</td>
+                      <td>GJ05/20172345</td>
+                      <td></td>
+                    </tr>
+                    <tr>
+                      <td>2014-04-02 03:04:34 AM IST</td>
+                      <td>USER1</td>
+                      <td>GJ05/20172345</td>
+                      <td></td>
+                    </tr>
+                    <tr>
+                      <td>2014-04-02 03:04:34 AM IST</td>
+                      <td>USER1</td>
+                      <td>GJ05/20172345</td>
+                      <td></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
