Inclusion for Map Markers
Inclusion for Map Markers

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script src="src/js/map.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4eHXVszAdWEGe1nk-oky3zWCUJ2mUGE8&callback=initMap"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false" type="text/javascript"></script>
 </head>
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -163,7 +163,7 @@
                 </tbody>
               </table>
           </div>
-          <div class="col-lg-4" id="map" style="height:40vh;"></div>
+          <div class="col-lg-4" id="map-canvas" style="height:40vh;"></div>
         </div>
       </div>
     </div>
