--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">  
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false" type="text/javascript"></script>
   <script src="src/js/map.js"></script>
 </head>
@@ -79,7 +79,7 @@
                     <td>
                       <i class="glyphicon glyphicon-file cc-notif-action-span" title="Issue Challan" data-target="#issueChallanModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
-                      <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" data-target="#mapParent"></i>
+                      <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" onclick="showUserRoute();"></i>
                       <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Vehicle Info" data-target="#vehicleDetailModal" data-toggle="modal"></i>
                     </td>
                   </tr>
