--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4eHXVszAdWEGe1nk-oky3zWCUJ2mUGE8&v=3.exp&sensor=false" type="text/javascript"></script>
   <script src="src/js/map.js"></script>
+  <script src="src/js/index.js"></script>
 </head>
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -277,7 +278,7 @@
                       <th>TIME</th>
                       <th>USER</th>
                       <th>LICENSE NO.</th>
-                      <th>ROUTE</th>
+                      <th>CARBON CONSUMPTION</th>
                     </tr>
                   </thead>
                   <tbody>
