--- a/index.html
+++ b/index.html
@@ -286,19 +286,7 @@
                       <td>2014-04-02 03:04:34 AM IST</td>
                       <td>USER1</td>
                       <td>GJ05/20172345</td>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <td>2014-04-02 03:04:34 AM IST</td>
-                      <td>USER1</td>
-                      <td>GJ05/20172345</td>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <td>2014-04-02 03:04:34 AM IST</td>
-                      <td>USER1</td>
-                      <td>GJ05/20172345</td>
-                      <td></td>
+                      <td><span id="cfData"></span></td>
                     </tr>
                   </tbody>
                 </table>
