--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                       <td>2014-04-02 03:04:34 AM IST</td>
                       <td>USER1</td>
                       <td>GJ05/20172345</td>
-                      <td><span id="cfData"></span></td>
+                      <td><span id="cfData" style="font-size:10px"></span></td>
                     </tr>
                   </tbody>
                 </table>
